src/objects/InternalEventAttendee__c.object
<CustomObject>
    <fields>
        <fullName>Check_In_Time__c</fullName>
        <label>チェックイン時間</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>確認コード</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_ID__c</fullName>
        <label>イメージID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&quot;https://c.prerelna1.content.pre.force.com/sfc/servlet.shepherd/version/download/&quot; + Image_ID__c, User__r.FirstName, 75, 92)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>画像</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalEvent__c</fullName>
        <label>社内行事</label>
        <referenceTo>InternalEvent__c</referenceTo>
        <relationshipName>EventAttendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>携帯番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>総時間</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ユーザ</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Volunteers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gaiyou__c</fullName>
        <label>概要</label>
        <type>TextArea</type>
    </fields>
    <label>社内行事参加者</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて</label>
    </listViews>
    <nameField>
        <displayFormat>IEA-{0000}</displayFormat>
        <label>社内行事参加者番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>